# kuka_experimental

kuka_hw/: CMakeLists.txt  package.xml
kuka_hw/config/: hardware_controllers.yaml
kuka_hw/include/kuka_hw/: kuka_hardware_interface.h  rsi_command.h  rsi_state.h  udp_server.h
kuka_hw/src/: kuka_hardware_interface.cpp  kuka_hardware_interface_node.cpp
kuka_hw/test/: kuka_kr16_control.launch
kuka_rsi_hw_interface/: CMakeLists.txt  package.xml
kuka_rsi_hw_interface/include/kuka_rsi_hw_interface/: kuka_hardware_interface.h  rsi_command.h  rsi_state.h  udp_server.h
kuka_rsi_hw_interface/krl/rsi_axis_correction/: RSIAxisCorr.rsi  RSIAxisCorr.rsi.xml
kuka_rsi_hw_interface/src/: kuka_hardware_interface.cpp  kuka_hardware_interface_node.cpp
kuka_rsi_simulator/: CMakeLists.txt  package.xml
