<?xml version="1.0"?>
<package>
  <name>kuka_rsi_simulator</name>
  <version>0.0.0</version>
  <description>The kuka_rsi_simulator package</description>

  <maintainer email="lars.tingelstad@ntnu.no">Lars Tingelstad</maintainer>
  <license>BSD</license>

  <url type="website">https://github.com/ros-industrial/kuka_experimental/wiki</url>
  <url type="bugtracker">https://github.com/ros-industrial/kuka_experimental/issues</url>
  <url type="repository">https://github.com/ros-industrial/kuka_experimental</url>
  <author email="lars.tingelstad@ntnu.no">Lars Tingelstad</author>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <export>
  </export>
</package>
